--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,13 @@ ul {
 }
 
 .work-card {
-  padding: 0 1.5rem;
+
+ 
+  width: 100%;
+  border: 1px solid #DFE1E6;
+  border-radius: 16px  ;
+  margin: 44px 0px;
+
 }
 
 .project-container {
@@ -180,7 +186,13 @@ ul {
   padding: 0;
   margin: 0;
 }
-
+.project-img{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
 .tags ul {
   display: flex;
   flex-direction: row;
