--- a/styles.css
+++ b/styles.css
@@ -277,3 +277,8 @@ ul {
   color: #253858;
   margin-left: 1rem;
 }
+.reach-out {
+  display: flex;
+  flex-direction: column;
+  border-top-left-radius: 80px;
+}
