fix linter errors

--- a/styles.css
+++ b/styles.css
@@ -278,14 +278,13 @@ ul {
 }
 
 #reach-out {
- 
   align-items: center;
   background-image: url(/images/about-image/contact-form-shapes-mobile.svg);
   margin: 0%;
   width: 100%;
   background-repeat: no-repeat;
   background-size: contain;
-  background-color: #6070FF;
+  background-color: #6070ff;
   background-position: right;
   border-radius: 15% 0 0 0;
 }
@@ -293,18 +292,20 @@ ul {
 .contact-me {
   color: #fff;
   text-align: center;
+  margin-top: 85px;
 }
 
 .cont-input {
   font-family: var(--main-font-family);
   text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 form {
-  margin-right: 30px;
+  margin-right: 45px;
   display: flex;
   flex-direction: column;
- 
 }
 
 .username {
@@ -340,6 +341,7 @@ form {
   margin-bottom: 20px;
   color: #b3bac5;
 }
+
 .submit {
   background: #fff;
   border-radius: 8px;
