--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
   font-size: 2.5rem;
   font-weight: 700;
   line-height: 52px;
-  margin: 0;
+  margin-left: 20px;
 }
 
 .menu-icon {
@@ -56,7 +56,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 7.125rem 1.5rem;
+  
 }
 
 .about {
@@ -65,20 +65,20 @@ body {
   font-weight: 400;
   line-height: 24px;
   padding: 12px 0;
-  margin: 0;
+  margin-left: 20px;
 }
 
 .social-media-title {
   text-transform: uppercase;
   color: var(--media-color);
   font-weight: 500;
-  margin: 0;
+  margin-left: 20px;
 }
 
 .social-media-content {
   display: flex;
   padding: 12px 0;
-  margin: 0;
+  margin-left: 35px;
 }
 
 ul {
@@ -224,6 +224,7 @@ ul {
   font-size: 16px;
   letter-spacing: 0.03em;
   transition: color 0.1s, background-color 0.1s;
+  margin-left: 20px;
 }
 
 .view-btn:hover {
@@ -277,16 +278,18 @@ ul {
   margin-left: 1rem;
 }
 
+
 #reach-out {
   align-items: center;
   background-image: url(/images/about-image/contact-form-shapes-mobile.svg);
-  margin: 0%;
+  margin-top: 50px;
   width: 100%;
   background-repeat: no-repeat;
   background-size: contain;
   background-color: #6070ff;
   background-position: right;
   border-radius: 15% 0 0 0;
+  padding-bottom: 50px;
 }
 
 .contact-me {
@@ -300,12 +303,15 @@ ul {
   text-align: center;
   margin-left: 20px;
   margin-right: 20px;
+  color: #fff;
 }
 
 form {
-  margin-right: 45px;
   display: flex;
   flex-direction: column;
+  width: 75%;
+  margin: 40px auto 0 auto;
+  
 }
 
 .username {
@@ -318,6 +324,7 @@ form {
   margin-bottom: 20px;
   color: #172b4d;
   font-weight: 400;
+
 }
 
 .email {
