--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,19 @@
   --background: #f7f7f9;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .header {
   display: flex;
   flex-direction: row;
   margin-top: 30px;
   justify-content: space-between;
   margin: 4px 0;
-  background-color: white;
+  background-color: #fff;
+
 }
 
 body {
@@ -21,11 +27,13 @@ body {
   margin: 0;
   font-family: var(--main-font-family);
 }
+
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
+
 a {
   text-decoration: none;
 
@@ -98,42 +106,50 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
-nav{
+
+nav {
   width: 100%;
 }
+
 .desc-nav {
-  display: none;
+  display: block;
   position: absolute;
   width: 100%;
   margin-top: 50px;
   margin-left: 28px;
 
-
-
 }
+
 .fa {
- color: #6070FF;
+  color: #6070FF;
 }
-#x-icon{
- display: none;
+
+#x-icon {
+  display: none;
 }
+
 .desc-nav li {
   display: flex;
-  flex-direction: column; 
+  text-align: right;
+  justify-content: end;
+  flex-direction: column;
   margin: 0 10px;
-  color: #FFFFFF;
   margin-top: 40px;
 }
+
 .desc-nav li a {
+  display: flex;
+  text-align: right;
   text-decoration: none;
-  color: #FFFFFF;
+  color: #fff;
   font-weight: 700;
   font-family: 'Poppins';
-font-style: normal;
-font-weight: 600;
-font-size: 32px;
-line-height: 44px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
 }
+
 .intro {
   color: var(--title-color);
   font-size: 2.5rem;
@@ -461,14 +477,25 @@ form {
     display: none;
   }
 
-  .desc-nav {
-    display: flex;
+  nav {
+    width: 186px;
+    margin-bottom: 30px;
   }
 
-  .desc-nav a {
+  .desc-nav {
+    width: 130px;
+    display: flex;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 50px;
+  }
+  .desc-nav li {
+    display: block;
+  }
+
+  .desc-nav li a {
     font-size: 15px;
     color: #344563;
-    padding: 20px;
     line-height: 20px;
     text-decoration: none;
   }
