--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   --background: #f7f7f9;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
 }
@@ -15,11 +15,9 @@
 .header {
   display: flex;
   flex-direction: row;
-  margin-top: 30px;
   justify-content: space-between;
-  margin: 4px 0;
+  margin: 30px 0 0 0;
   background-color: #fff;
-
 }
 
 body {
@@ -36,15 +34,12 @@ ul {
 
 a {
   text-decoration: none;
-
 }
 
 .logo {
   display: block;
   padding: 10px 12px;
   margin: 0 12px;
-
-
 }
 
 .logo-text {
@@ -112,16 +107,15 @@ nav {
 }
 
 .desc-nav {
-  display: block;
+  display: none;
   position: absolute;
   width: 100%;
   margin-top: 50px;
   margin-left: 28px;
-
 }
 
 .fa {
-  color: #6070FF;
+  color: #6070ff;
 }
 
 #x-icon {
@@ -142,8 +136,7 @@ nav {
   text-align: right;
   text-decoration: none;
   color: #fff;
-  font-weight: 700;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 32px;
@@ -184,10 +177,6 @@ nav {
   display: flex;
   padding: 12px 0;
   margin-left: 35px;
-}
-
-ul {
-  list-style-type: none;
 }
 
 .social-media-icons {
@@ -489,6 +478,7 @@ form {
     margin-left: 0;
     margin-right: 50px;
   }
+
   .desc-nav li {
     display: block;
   }
