--- a/styles.css
+++ b/styles.css
@@ -29,23 +29,23 @@ body {
 .overlay {
   display: none;
   position: fixed;
-  left: 0px;
-  right: 0px;
-  top: 0px;
-  bottom: 0px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   transition: 2000ms ease-in-out;
-  background: #C1C7D0;
+  background: #c1c7d0;
   mix-blend-mode: multiply;
 }
 
 .modal {
   display: none;
   position: fixed;
-  left: 0px;
-  right: 0px;
+  left: 0;
+  right: 0;
   transition: 2000ms ease-in-out;
-  top: 0px;
-  bottom: 0px;
+  top: 0;
+  bottom: 0;
   z-index: 10;
 }
 
@@ -66,10 +66,10 @@ body {
   position: absolute;
   width: 343px;
   height: auto;
-  left: calc(46% - 343px/2);
+  left: calc(46% - 343px / 2);
   top: 28px;
-  background: #FFFFFF;
-  border: 1px solid #DFE1E6;
+  background: #fff;
+  border: 1px solid #dfe1e6;
   border-radius: 16px;
 }
 
@@ -81,20 +81,26 @@ body {
 }
 
 .modal-container .modal-title {
-  font-family: 'Poppins';
+  font-family: 'Poppins'sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
   line-height: 44px;
-  color: #172B4D;
+  color: #172b4d;
 }
 
 .btn-close {
   width: 24px;
   height: 24px;
   font-size: 30px;
-  color: #67798E;
+  color: #67798e;
   cursor: pointer;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .header-list ul {
@@ -106,7 +112,7 @@ body {
 .circle-dot {
   width: 8px;
   height: 8px;
-  background: #C1C7D0;
+  background: #c1c7d0;
   border-radius: 5px;
   margin-top: 5px;
 }
@@ -121,12 +127,26 @@ body {
 .modal-desc {
   width: 100%;
   height: auto;
-  font-family: 'Poppins';
+  font-family: 'Poppins'sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
   color: #344563;
+}
+
+li {
+  list-style: none;
+}
+
+.list-popup li {
+  margin-top: 20px;
+}
+
+.skill-list li {
+  background: var(--background);
+  border-radius: 8px;
+  padding: 9px 0 9.72px 12px;
 }
 
 .modal-tech-list ul {
@@ -140,10 +160,30 @@ body {
   margin: 20px;
 }
 
+.desc-nav li {
+  display: flex;
+  text-align: right;
+  justify-content: end;
+  flex-direction: column;
+  margin: 0 10px;
+  margin-top: 40px;
+}
+
 .modal-tech-list ul li {
-  background: #EBEBFF;
+  background: #ebebff;
   padding: 5px;
   border-radius: 8px;
+}
+
+button {
+  border-color: #7f8cff;
+  color: #7f8cff;
+  font-size: 17px;
+  border-radius: 5px;
+  background-color: white;
+  padding: 10px;
+  width: fit-content;
+  transition: all 0.5s ease-out;
 }
 
 .modal-buttons {
@@ -157,11 +197,23 @@ body {
 .modal-buttons button {
   height: 100%;
   text-align: center;
-  font-family: 'Poppins';
+  font-family: 'Poppins'sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
   line-height: 20px;
+}
+
+.see-live {
+  border: 1px solid #6070ff;
+  padding: 10px;
+  border-radius: 8px;
+  font-family: 'Poppins'sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #6070ff;
 }
 
 .icon {
@@ -197,17 +249,6 @@ body {
   margin-top: 62px;
 }
 
-button {
-  border-color: #7f8cff;
-  color: #7f8cff;
-  font-size: 17px;
-  border-radius: 5px;
-  background-color: white;
-  padding: 10px;
-  width: fit-content;
-  transition: all 0.5s ease-out;
-}
-
 a {
   text-decoration: none;
 }
@@ -221,14 +262,6 @@ a {
   gap: 40px;
 }
 
-li {
-  list-style: none;
-}
-
-.list-popup li {
-  margin-top: 20px;
-}
-
 .list-popup li a {
   font-family: 'Poppins', sans-serif;
   font-style: normal;
@@ -239,12 +272,6 @@ li {
 }
 
 /* popup window End */
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
 
 .logo {
   display: block;
@@ -285,7 +312,6 @@ ul {
   margin-right: auto;
 }
 
-
 nav {
   width: 100%;
 }
@@ -304,15 +330,6 @@ nav {
 
 #x-icon {
   display: none;
-}
-
-.desc-nav li {
-  display: flex;
-  text-align: right;
-  justify-content: end;
-  flex-direction: column;
-  margin: 0 10px;
-  margin-top: 40px;
 }
 
 .desc-nav li a {
@@ -451,12 +468,6 @@ nav {
   color: var(--sub-title-color);
   font-size: 15px;
   font-weight: 400;
-}
-
-.skill-list li {
-  background: var(--background);
-  border-radius: 8px;
-  padding: 9px 0 9.72px 12px;
 }
 
 .project-description p {
@@ -683,7 +694,7 @@ form {
     width: 100%;
     height: 100%;
     transition: 2000ms ease-in-out;
-    background: #C1C7D0;
+    background: #c1c7d0;
     mix-blend-mode: multiply;
   }
 
@@ -707,10 +718,10 @@ form {
     position: absolute;
     width: 762px;
     height: 593px;
-    left: calc(32% - 343px/2);
+    left: calc(32% - 343px / 2);
     top: 4px;
-    background: #FFFFFF;
-    border: 1px solid #DFE1E6;
+    background: #fff;
+    border: 1px solid #dfe1e6;
     border-radius: 16px;
   }
 
@@ -728,11 +739,24 @@ form {
   }
 
   .modal-tech-list ul {
-    margin-top: 0px;
+    margin-top: 0;
+  }
+
+  .see-live {
+    border: 1px solid #6070ff;
+    padding: 10px;
+    border-radius: 8px;
+    font-family: 'Poppins'sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    color: #6070ff;
   }
 
   .footer-list hr {
     margin: 0;
+    gap: 10px;
   }
 
   .footer-desc {
@@ -751,9 +775,7 @@ form {
     gap: 10px;
   }
 
-  .footer-list hr {
-    gap: 10px;
-  }
+
 
 
   /* Modal Section End */
