--- a/styles.css
+++ b/styles.css
@@ -631,11 +631,11 @@ form {
   border: 1px solid #cfd8dc;
   border-radius: 8px;
   background: #fff;
-  margin-bottom: 20px;
   color: #172b4d;
 }
 
 .comment {
+  margin-top: 20px;
   width: 100%;
   height: 110px;
   padding: 5px;
@@ -647,7 +647,8 @@ form {
 }
 
 small {
-  color: red;
+  font-weight: bold;
+  color: #be0202;
   text-align: left;
   font-size: 12px;
   display: none;
@@ -1081,7 +1082,7 @@ small {
   }
 
   small {
-    color: red;
+    color: #be0202;
     text-align: left;
     font-size: 12px;
     display: none;
