fix li in nav bar

--- a/styles.css
+++ b/styles.css
@@ -699,7 +699,7 @@ form div {
   .desc-nav li a {
     font-size: 15px;
     color: #344563;
-    line-height: 20px;
+    margin-top: -37px;
     text-decoration: none;
   }
 
