--- a/styles.css
+++ b/styles.css
@@ -798,7 +798,7 @@ form div {
     background-repeat: no-repeat;
     background-size: cover;
     padding: 10px;
-    background-color: #B1E1FF;
+    background-color: #b1e1ff;
     border-radius: 2%;
   }
 
