--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@1,800&display=swap');
 :root {
   --main-bg-color: #6070ff;
@@ -9,8 +10,8 @@
 }
 
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 .header {
@@ -21,8 +22,7 @@
 }
 
 body {
-  padding: 0;
-  margin: 0;
+  
   font-family: var(--main-font-family);
 }
 
@@ -71,7 +71,7 @@ body {
   height: auto;
   left: calc(46% - 343px / 2);
   top: 28px;
-  background: #fff;
+  background: linear-gradient(to right, #f3e7e9, #e3eeff);
   border: 1px solid #dfe1e6;
   border-radius: 16px;
 }
@@ -153,10 +153,12 @@ li {
 }
 
 .modal-tech-list ul {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(3, 97px);
   gap: 10px;
+  align-items: flex-start;
+  padding: 0;
+  margin-bottom: 1.5rem;
 }
 
 .footer-list hr {
@@ -277,15 +279,17 @@ a {
 /* popup window End */
 
 .logo {
-  display: none;
-  padding: 10px 12px;
-  margin: 0 12px;
+    display: grid;
+    grid-template-columns: repeat(3,111px);
+    padding: 0 9px;
+    font-size: 10px;
 }
 
 .logo-text {
   font-size: 20px;
   font-weight: 700;
   color: #344563;
+  margin-top: 10px;
 }
 
 .logo-text:hover {
@@ -293,9 +297,10 @@ a {
 }
 
 .first-section {
-  background:url("./images/bg_Header-Mobile.png");
+  background:url("../images/bg_Header-Mobile.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #b1e1ff;
 }
 
 .main-content {
@@ -306,12 +311,11 @@ a {
 }
 
 .img {
-  height: 267px;
-  width: 365px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin-left: auto;
-  margin-right: auto;
+      height: 267px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-left: -2%;
+    border-radius: 10px;
 }
 
 nav {
@@ -348,25 +352,25 @@ nav {
 
 .intro {
   color: var(--title-color);
-  font-size: 3.5rem;
-  font-weight: 500;
-  line-height: 52px;
-  margin-left: 20px;
-  text-shadow: 1px 1px 1px #000000;
-  font-family: 'Alegreya', serif;
+    font-size: 2.5rem;
+    font-weight: 500;
+    margin-left: 20px;
+    text-shadow: 1px 1px 1px #000000;
+    font-family: 'Alegreya', serif;
 }
 
 .menu-icon {
-  padding: 8px;
-  margin: 0 24px;
+    padding: 8px;
+    display: flex;
+    margin-left: -38px;
 }
 
 .about {
   color: var(--sub-title-color);
   font-size: 1rem;
   font-weight: 400;
-  line-height: 24px;
-  padding: 12px 0;
+  line-height: 30px;
+  padding: 20px 0;
   margin-left: 20px;
   margin-right: 20px;
 }
@@ -407,6 +411,7 @@ nav {
   border-radius: 16px;
   padding: 16px;
   margin: 20px auto 20px auto;
+  background:linear-gradient(to right, rgb(201, 230, 209), rgb(217, 209, 230));
 }
 
 .about-project {
@@ -424,7 +429,7 @@ nav {
 .project-title h4 {
   margin: 0;
   padding: 0;
-  font-size: 33px;
+  font-size: 24px;
   font-weight: 700;
 }
 
@@ -480,12 +485,12 @@ nav {
 }
 
 .tags ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  padding: 0;
-  margin-bottom: 1.5rem;
+  display: grid;
+    grid-template-columns: repeat(3, 111px);
+    gap: 10px;
+    align-items: flex-start;
+    padding: 0;
+    margin-bottom: 1.5rem;
 }
 
 .tags ul li {
@@ -514,12 +519,21 @@ nav {
   letter-spacing: 0.03em;
   transition: color 0.1s, background-color 0.1s;
   margin-left: 20px;
+  transform: scale(1);
+  transition: transform .2s; 
+  box-shadow: 0px 0px 0px #000;
+  transition: box-shadow .2s;
+
 }
 
 .view-btn:hover {
   background-color: #4053fc;
   color: #fff;
   border-color: #4053fc;
+  transform: scale(1.1);
+  box-shadow: 2px 2px 2px #000;
+
+
 }
 
 .submit {
@@ -666,10 +680,18 @@ form div {
   flex-direction: row;
 }
 
+svg {
+  display: block;
+  font: 3.5em 'Montserrat';
+  width: 960px;
+  
+}
+
 @media only screen and (min-width: 768px) {
   .header {
-    margin-left: 10%;
-    margin-right: 10%;
+    
+    background: linear-gradient(to right, rgb(177, 225, 255), rgb(34, 193, 195), rgb(253, 187, 45));
+    height: 56px;
   }
 
   .header-info {
@@ -690,7 +712,7 @@ form div {
     width: 130px;
     display: flex;
     margin-top: 0;
-    margin-left: 0;
+    margin-left: -10%;
     margin-right: 50px;
   }
 
@@ -739,7 +761,7 @@ form div {
     height: 593px;
     left: calc(32% - 343px / 2);
     top: 4px;
-    background: #fff;
+    background: linear-gradient(to right, #f3e7e9, #e3eeff);
     border: 1px solid #dfe1e6;
     border-radius: 16px;
   }
@@ -773,6 +795,14 @@ form div {
     color: #6070ff;
   }
 
+  .see-live:hover {
+  background-color: #4053fc;
+  color: #fff;
+  border-color: #4053fc;
+  transform: scale(1.1);
+  box-shadow: 2px 2px 2px #000;
+  }
+
   .footer-list hr {
     margin: 0;
     gap: 10px;
@@ -796,14 +826,15 @@ form div {
 
   /* Modal Section End */
   .first-section {
-    background: url("./images/bg_Header.png"),linear-gradient(to right,
+    background: url("../images/bg_Header.png"),linear-gradient(to right,
     #fdbb2d,
     #22c1c3);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: bottom;
     padding: 10px;
     background-color: #b1e1ff;
-    border-radius: 2%;
+    border-radius: 0 0 2% 2%;
   }
 
   .social-media-container {
@@ -823,7 +854,7 @@ form div {
   }
 
   .work-card {
-    background-color: #e5e5e5;
+    background: linear-gradient(to right, #c9e6d1, #d9d1e6);
     padding-bottom: 64px;
     margin-top: 50px;
   }
@@ -843,26 +874,39 @@ form div {
     border-radius: 24px;
     padding: 35px;
     gap: 15px;
-    background-color: #fff;
+    background: linear-gradient(to right, #f0f2f5, #e6e9ed);
     height: 400px;
     width: 80%;
     overflow: hidden;
-    flex: 1;
   }
 
   .about-project {
     margin-left: 3%;
     flex: 1;
+    height: 100%;
+    width: 100%;
   }
 
   .img {
-    height: 448px;
-    width: 544px;
-    background-image: url("./images/big1.png");
+    
+    background-image: url("../images/big1.png");
     background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
-    flex: 2;
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    border-radius: 24px;
+    background-position: center;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .img:hover {
+
+    width: auto;
+    height: 100%;
+    transform: scale(1.1);
   }
 
   @import url("https://fonts.googleapis.com/css?family=Arima+Madurai:300");
@@ -1005,7 +1049,7 @@ form div {
 
   .middle-section {
     display: flex;
-    background-color: #fff;
+    background: linear-gradient(to right, #f5f5dc, #f5f5dc);
     border-radius: 0 80px 0 0;
     padding: 20px;
     align-content: center;
@@ -1082,7 +1126,7 @@ form div {
   }
 
   .form-style {
-    background: url("./images/contact-form-background-shapes.png"),linear-gradient(to right,
+    background: url("../images/contact-form-background-shapes.png"),linear-gradient(to right,
     #fdbb2d,
     #22c1c3);
     background-repeat: no-repeat;
@@ -1117,6 +1161,7 @@ form div {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    margin-top: 10px;
   }
 
   span {
@@ -1163,4 +1208,72 @@ form div {
       width: 30vw;
     }
   }
+  svg {
+    display: block;
+    font: 3.5em 'Montserrat';
+    width: 960px;
+    height: 160px;
+    margin-left: -15%;
+    margin-top: -3%;
+    
 }
+.about {
+  color: var(--sub-title-color);
+  font-size: 1.3rem;
+  font-weight: 400;
+  line-height: 30px;
+  padding: 50px 0;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+}
+
+.container {
+  display: flex;
+/*   border:1px solid red; */
+  height: 100%;
+  align-items: center;
+}
+
+
+
+.text-copy {
+    fill: none;
+    stroke: white;
+    stroke-dasharray: 6% 29%;
+    stroke-width: 5px;
+    stroke-dashoffset: 0%;
+    animation: stroke-offset 5.5s infinite linear;
+}
+
+.text-copy:nth-child(1){
+	stroke: #4D163D;
+	animation-delay: -1;
+}
+
+.text-copy:nth-child(2){
+	stroke: #840037;
+	animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+	stroke: #BD0034;
+	animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+	stroke: #BD0034;
+	animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+	stroke: #FDB731;
+	animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+	100% {stroke-dashoffset: -35%;}
+}
+
+/* https://cdn.dribbble.com/users/1192437/screenshots/5039546/media/e31a26852f18b3ec8e4fba56ce343feb.gif */
